--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container site">
         <div class="container">
             <div class="row mobile">
-                <div class="col-md-3 poketext">
+                <div class="col-md-3 nozamatext">
                     <p class="banner">nozama<br><img src="./assets/images/nozama.png"></p>
                 </div>
 
@@ -106,108 +106,10 @@
             </div>
         </div>
 
-        <!-- <div class="container desktop-view">
-            <div class="row d-flex justify-content-center">
-                <div class="icon-set"></div>
-            </div>
-        </div> -->
-
         <div class="container">
-            <!-- <div class="row wrapping"> -->
-                <!-- <div class="col-md-3 search-section">
-                    <div class="poketext">
-                        <h2>Explore nossa Pokedex</h2>
-                    </div>
-                    <form>
-                        <div class="form-group">
-                            <label for="selectElemento">Elemento</label>
-                            <select class="form-control" id="selectElemento">
-                                <option>Normal</option>
-                                <option>Fogo</option>
-                                <option>Água</option>
-                                <option>Grama</option>
-                                <option>Elétrico</option>
-                                <option>Gelo</option>
-                                <option>Lutador</option>
-                                <option>Venenoso</option>
-                                <option>Terra</option>
-                                <option>Voador</option>
-                                <option>Psíquico</option>
-                                <option>Inseto</option>
-                                <option>Pedra</option>
-                                <option>Fantasma</option>
-                                <option>Dragão</option>
-                                <option>Sombrio</option>
-                                <option>Aço</option>
-                                <option>Fada</option>
-                            </select>
-
-                            <label for="selectGeracao">Geração</label>
-                            <select class="form-control" id="selectGeracao">
-                                <option>1ª Geração: Pokémon Red, Blue e Yellow</option>
-                                <option>2ª Geração: Pokémon Gold, Silver e Crystal</option>
-                                <option>3ª Geração: Pokémon Ruby, Sapphire e Emerald</option>
-                                <option>4ª Geração: Pokémon Diamond, Pearl e Platinum</option>
-                                <option>5ª Geração: Pokémon Black, White, Black 2 e White </option>
-                                <option>6ª Geração: Pokémon X, Y, Omega Ruby e Alpha Sapphire</option>
-                                <option>7ª Geração: Pokémon Sun, Moon, Ultra Sun e Ultra Moon</option>
-                                <option>8ª Geração: Pokémon Sword e Shield</option>
-                            </select>
-
-                            <label for="selectCategoria">Categoria de item</label>
-                            <select class="form-control" id="selectCategoria">
-                                <option>Pelúcias</option>
-                                <option>Pokébolas</option>
-                                <option>Action figures</option>
-                                <option>Camisas</option>
-                                <option>Mochilas</option>
-                            </select>
-
-                            <label for="input1">R$ A partir de</label>
-                            <input type="number" step="any" class="form-control" id="input1">
-                            <label for="input2">R$ Até</label>
-                            <input type="number" step="any" class="form-control" id="input2">
-
-                        </div>
-                        <div class="row center justify-content-center align-items-center">
-                            <button type="submit" class="btn btn-secondary submit">Buscar</button>
-                        </div>
-
-                    </form>
-                </div> -->
-
-                <!-- <div class="col-md-9 box">
-                    <div id="carousel" class="carousel slide" data-ride="carousel">
-
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img src="./assets/images/carousel/1.webp" alt="Pelúcias Pokemon">
-                            </div>
-
-                            <div class="item">
-                                <img src="./assets/images/carousel/2-resized.png" alt="Pelúcias Pokemon">
-                            </div>
-
-                            <div class="item">
-                                <img src="./assets/images/carousel/3-resized.png" alt="Pelúcias Pokemon">
-                            </div>
-                        </div>
-
-                        <a class="left carousel-control" href="#carousel" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                            <span class="sr-only">Anterior</span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                            <span class="sr-only">Próximo</span>
-                        </a>
-                    </div>
-                </div> -->
-
-            <!-- </div> -->
             <div class="row">
                 <div class="col-md-9">
-                    <div class="row poketext justify-content-center align-items-center">
+                    <div class="row nozamatext justify-content-center align-items-center">
                         <h3 class="titulo-secao">Está bombando: fique por dentro das últimas tendências!</h3>
                     </div>
                     <div class="row justify-content-center align-items-center">
@@ -310,98 +212,19 @@
                     </div>
 
                     <div class="row center justify-content-center align-items-center">
-                        <button class="btn btn-secondary submit see-btn poketext">Ver mais </button>
+                        <button class="btn btn-secondary submit see-btn nozamatext">Ver mais </button>
                     </div>
                 </div>
 
                 <div class="col-md-3 side">
                     <row>
-                        <div class="poketext">
+                        <div class="nozamatext">
                             <h3 class="titulo-subsecao">Categorias</h3>
                         </div>
-                        <!-- <div>
-                            <div class="card ">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img src="./assets/images/produtos/mew.webp" class="card-img small"
-                                            alt="Imagem de uma pelúcia do Mew">
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title sub-card"><b>Pelúcia Mew</b></h5>
-                                            <p class="card-text sub-card">R$ 68,00</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="divider"></div>
-                            <div class="card ">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img src="./assets/images/produtos/ninetales.webp" class="card-img small"
-                                            alt="Imagem de uma pelúcia do Ninetales">
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title sub-card"><b>Pelúcia Ninetales</b></h5>
-                                            <p class="card-text sub-card">R$ 65,00</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="divider"></div>
-                            <div class="card ">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img src="./assets/images/produtos/piplup.webp" class="card-img small"
-                                            alt="Imagem de uma pelúcia do Piplup">
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title sub-card"><b>Pelúcia Piplup</b></h5>
-                                            <p class="card-text sub-card">R$ 34,00</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="divider"></div>
-                            <div class="card ">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img src="./assets/images/produtos/snorlax.webp" class="card-img small"
-                                            alt="Imagem de uma pelúcia do Snorlax">
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title sub-card"><b>Pelúcia Snorlax</b></h5>
-                                            <p class="card-text sub-card">R$ 55,00</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="divider"></div>
-                            <div class="card ">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img src="./assets/images/produtos/squirtle.jpg" class="card-img small"
-                                            alt="Imagem de uma pelúcia do Squirtle">
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title sub-card"><b>Pelúcia Squirtle</b></h5>
-                                            <p class="card-text sub-card">R$ 70,00</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row center justify-content-center align-items-center">
-                                <button class="btn btn-secondary submit">Ver mais</button>
-                            </div>
-                        </div> -->
                     </row>
 
                     <row>
-                        <div class="poketext">
+                        <div class="nozamatext">
                             <h3 class="titulo-subsecao">Newsletter</h3>
                             <h4 class="text">Saiba primeiro todas as novidades da nozama!</h4>
                         </div>
@@ -412,15 +235,14 @@
                             </div>
                         </div>
                         <div class="row center justify-content-center align-items-center">
-                            <button class="btn btn-secondary submit poketext">Inscrever</button>
+                            <button class="btn btn-secondary submit nozamatext">Inscrever</button>
 
                         </div>
                     </row>
 
                     <row>
                         <div>
-                            <img src="./assets/images/nozama.png" width="100%"
-                                alt="Logomarca da nozama">
+                            <img src="./assets/images/nozama.png" width="100%" alt="Logomarca da nozama">
                         </div>
                     </row>
                 </div>
@@ -435,7 +257,7 @@
         <div class=" footer">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="poketext">
+                    <div class="nozamatext">
                         <h3>Pagamento</h3>
                     </div>
                     <div>
@@ -443,7 +265,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="poketext">
+                    <div class="nozamatext">
                         <h3>Menu rápido</h3>
                     </div>
                     <div class="menu">
@@ -459,7 +281,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="poketext">
+                    <div class="nozamatext">
                         <h3>Redes sociais</h3>
                     </div>
                     <div>
@@ -469,7 +291,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="poketext">
+                    <div class="nozamatext">
                         <h3>Contato</h3>
                     </div>
                     <div>
@@ -492,7 +314,8 @@
                 </div>
             </div>
             <div class="container">
-                <p class=" copyright"><b>2023 - Maria Carolina Resende Jaudacy, matrícula 667477 - Curso de Ciência da Computação - Todos os direitos reservados.</b></p>
+                <p class=" copyright"><b>2023 - Maria Carolina Resende Jaudacy, matrícula 667477 - Curso de Ciência da
+                        Computação - Todos os direitos reservados.</b></p>
             </div>
         </div>
     </div>
