--- a/index.html
+++ b/index.html
@@ -112,104 +112,7 @@
                     <div class="row nozamatext justify-content-center align-items-center">
                         <h3 class="titulo-secao">Está bombando: fique por dentro das últimas tendências!</h3>
                     </div>
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/a.webp" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Turtwig">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Turtwig</b></h5>
-                                    <p class="card-text">R$ 25,00</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/bulbassaur.webp" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Bulbasaur">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Peúcia Bulbasaur</b></h5>
-                                    <p class="card-text">R$ 53,00</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/Pikachu.png" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Pikachu">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Pikachu</b></h5>
-                                    <p class="card-text">R$ 55,00</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/charmander.jpg" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Charmander">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Charmander</b></h5>
-                                    <p class="card-text">R$ 55,00</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/eevee.jpg" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Eeve">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Eevee</b></h5>
-                                    <p class="card-text">R$ 39,00</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/ekans.webp" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Ekans">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Ekans</b></h5>
-                                    <p class="card-text">R$ 34,00</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/gengar.jpg" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Gengar">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Gengar</b></h5>
-                                    <p class="card-text">R$ 34,00</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/glaceon.webp" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Glaceon">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Glaceon</b></h5>
-                                    <p class="card-text">R$ 45,00</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img src="./assets/images/produtos/meowth.webp" class="card-img-top"
-                                    alt="Imagem de uma pelúcia do Meowth">
-                                <div class="card-body">
-                                    <h5 class="card-title"><b>Pelúcia Meowth</b></h5>
-                                    <p class="card-text">R$ 55,00</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="row justify-content-center align-items-center" id="produtos-home"></div>
 
                     <div class="row center justify-content-center align-items-center">
                         <button class="btn btn-secondary submit see-btn nozamatext">Ver mais </button>
