--- a/pesquisa.html
+++ b/pesquisa.html
@@ -19,7 +19,7 @@
     <script src="./scripts.js"></script>
 </head>
 
-<body onload="obterProdutos(); obterCategorias();">
+<body onload="obterProdutos(); obterCategorias()">
     <div class="container site">
         <div class="container">
             <div class="row mobile">
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="row nozamatext justify-content-center align-items-center">
-                        <h3 class="titulo-secao">Está bombando: fique por dentro das últimas tendências!</h3>
+                        <h3 class="titulo-secao" id="descricao-pagina"></h3>
                     </div>
                     <div class="row justify-content-center align-items-center" id="produtos-home"></div>
 
